managing-ingress-traffic-patterns-kubernetes-services/05/demos/implementing-a-canary-release-with-ingress/nginxhello/nginxhello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxhello
  labels:
    app.kubernetes.io/name: nginxhello
    app.kubernetes.io/part-of: nginxhello
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: nginxhello
      app.kubernetes.io/part-of: nginxhello
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginxhello
        app.kubernetes.io/part-of: nginxhello
    spec:
      containers:
      - name: nginxhello
        image: nbrown/nginxhello:1.14.2
        ports:
        - containerPort: 80
