managing-ingress-traffic-patterns-kubernetes-services/05/demos/implementing-a-canary-release-with-ingress/nginxhello/nginxhello-canary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxhello-canary
  labels:
    app.kubernetes.io/name: nginxhello-canary
    app.kubernetes.io/part-of: nginxhello-canary
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: nginxhello-canary
    app.kubernetes.io/part-of: nginxhello-canary
