managing-ingress-traffic-patterns-kubernetes-services/05/demos/implementing-a-canary-release-with-ingress/nginxhello/nginxhello-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginxhello
spec:
  rules:
  - host: <insert name associated with load balancer>
    http:
      paths:
      - backend:
          serviceName: nginxhello
          servicePort: 80
